--- a/package.json
+++ b/package.json
@@ -1,34 +1,53 @@
 {
-  "name": "@theappstudio/solidity",
-  "version": "0.9.4",
-  "description": "Solidity-based libraries for supporting ERC-721 and ERC-1155 smart contracts",
-  "keywords": [
-    "solidity",
-    "onchain",
-    "svg"
-  ],
-  "homepage": "https://github.com/theappstudiollc/contracts-sol#readme",
-  "bugs": {
-    "url": "https://github.com/theappstudiollc/contracts-sol/issues"
-  },
-  "license": "MIT",
-  "author": "DS Mitchell",
-  "files": [
-    "contracts/"
-  ],
-  "repository": "git+https://github.com/theappstudiollc/contracts-sol.git",
-  "dependencies": {
-    "@openzeppelin/contracts": "^4.0",
-    "base64-sol": "^1.1.0"
-  },
-  "devDependencies": {
-    "@nomiclabs/hardhat-ethers": "^2.0.0",
-    "@nomiclabs/hardhat-waffle": "^2.0.0",
-    "chai": "^4.2.0",
-    "ethereum-waffle": "^3.0.0",
-    "ethers": "^5.0.0",
-    "hardhat": "^2.6.8",
-    "hardhat-gas-reporter": "^1.0.4",
-    "solidity-coverage": "^0.7.16"
-  }
+	"name": "@theappstudio/solidity",
+	"version": "0.9.5",
+	"description": "Solidity-based libraries for supporting ERC-721 and ERC-1155 smart contracts",
+	"keywords": [
+		"solidity",
+		"onchain",
+		"svg"
+	],
+	"homepage": "https://github.com/theappstudiollc/contracts-sol#readme",
+	"bugs": {
+		"url": "https://github.com/theappstudiollc/contracts-sol/issues"
+	},
+	"license": "MIT",
+	"author": "DS Mitchell",
+	"files": [
+		"contracts/"
+	],
+	"repository": "git+https://github.com/theappstudiollc/contracts-sol.git",
+	"dependencies": {
+		"@openzeppelin/contracts": "^4.0",
+		"base64-sol": "^1.1.0"
+	},
+	"devDependencies": {
+		"@nomiclabs/hardhat-ethers": "^2.0.0",
+		"@nomiclabs/hardhat-waffle": "^2.0.0",
+		"@typechain/ethers-v5": "^8.0.5",
+		"@typechain/hardhat": "^3.0.0",
+		"@types/chai": "^4.2.21",
+		"@types/mocha": "^9.0.0",
+		"@typescript-eslint/eslint-plugin": "^4.29.1",
+		"@typescript-eslint/parser": "^4.29.1",
+		"chai": "^4.2.0",
+		"eslint": "^7.29.0",
+		"eslint-config-prettier": "^8.3.0",
+		"eslint-config-standard": "^16.0.3",
+		"eslint-plugin-import": "^2.23.4",
+		"eslint-plugin-node": "^11.1.0",
+		"eslint-plugin-prettier": "^3.4.0",
+		"eslint-plugin-promise": "^5.1.0",
+		"ethereum-waffle": "^3.0.0",
+		"ethers": "^5.0.0",
+		"hardhat": "^2.6.8",
+		"hardhat-gas-reporter": "^1.0.4",
+		"prettier": "^2.3.2",
+		"prettier-plugin-solidity": "^1.0.0-beta.13",
+		"solhint": "^3.3.6",
+		"solidity-coverage": "^0.7.17",
+		"ts-node": "^10.1.0",
+		"typechain": "^6.0.5",
+		"typescript": "^4.5.2"
+	}
 }
