--- a/package.json
+++ b/package.json
@@ -17,36 +17,45 @@
 		"contracts/"
 	],
 	"repository": "git+https://github.com/theappstudiollc/contracts-sol.git",
+	"scripts": {
+		"coverage": "hardhat coverage",
+		"build": "hardhat compile",
+		"test": "hardhat test",
+		"clean": "hardhat clean"
+	},
 	"dependencies": {
 		"@openzeppelin/contracts": "^4.5.0"
 	},
 	"devDependencies": {
-		"@nomiclabs/hardhat-ethers": "^2.0.0",
-		"@nomiclabs/hardhat-waffle": "^2.0.0",
-		"@typechain/ethers-v5": "^9.0.0",
-		"@typechain/hardhat": "^4.0.0",
-		"@types/chai": "^4.0.0",
-		"@types/mocha": "^9.0.0",
-		"@typescript-eslint/eslint-plugin": "^5.0.0",
-		"@typescript-eslint/parser": "^5.0.0",
-		"chai": "^4.0.0",
-		"eslint": "^8.0.0",
-		"eslint-config-prettier": "^8.0.0",
-		"eslint-config-standard": "^16.0.0",
-		"eslint-plugin-import": "^2.0.0",
-		"eslint-plugin-node": "^11.0.0",
-		"eslint-plugin-prettier": "^4.0.0",
-		"eslint-plugin-promise": "^6.0.0",
-		"ethereum-waffle": "^3.0.0",
-		"ethers": "^5.0.0",
-		"hardhat": "^2.0.0",
-		"hardhat-gas-reporter": "^1.0.0",
-		"prettier": "^2.0.0",
-		"prettier-plugin-solidity": "^1.0.0-beta.13",
-		"solhint": "^3.0.0",
-		"solidity-coverage": "^0.7.0",
-		"ts-node": "^10.0.0",
-		"typechain": "^7.0.0",
-		"typescript": "^4.0.0"
+		"@nomicfoundation/hardhat-chai-matchers": "^2.0.2",
+		"@nomicfoundation/hardhat-ethers": "^3.0.5",
+		"@nomicfoundation/hardhat-network-helpers": "^1.0.9",
+		"@nomicfoundation/hardhat-toolbox": "^4.0.0",
+		"@nomicfoundation/hardhat-verify": "^2.0.1",
+		"@typechain/ethers-v6": "^0.5.1",
+		"@typechain/hardhat": "^9.1.0",
+		"@types/chai": "^4.3.11",
+		"@types/mocha": "^10.0.6",
+		"@types/node": "^20.9.5",
+		"@typescript-eslint/eslint-plugin": "^6.12.0",
+		"@typescript-eslint/parser": "^6.12.0",
+		"chai": "^4.3.10",
+		"eslint": "^8.54.0",
+		"eslint-config-prettier": "^9.0.0",
+		"eslint-config-standard": "^17.1.0",
+		"eslint-plugin-import": "^2.29.0",
+		"eslint-plugin-node": "^11.1.0",
+		"eslint-plugin-prettier": "^5.0.1",
+		"eslint-plugin-promise": "^6.1.1",
+		"ethers": "^6.8.1",
+		"hardhat": "^2.19.1",
+		"hardhat-gas-reporter": "^1.0.9",
+		"prettier": "^3.1.0",
+		"prettier-plugin-solidity": "^1.2.0",
+		"solhint": "^4.0.0",
+		"solidity-coverage": "^0.8.5",
+		"ts-node": "^10.9.1",
+		"typechain": "^8.3.2",
+		"typescript": "^5.3.2"
 	}
 }
