--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,13 @@
 {
     "compilerOptions": {
-		"target": "es2018",
+		"target": "es2020",
 		"module": "commonjs",
 		"strict": true,
 		"esModuleInterop": true,
 		"outDir": "dist",
 		"declaration": true
     },
-    "include": ["./scripts", "./test", "./typechain-types"],
+    "include": ["./test", "./typechain-types"],
     "files": ["./hardhat.config.ts"],
-    "exclude": ["node_modules", "dist"]
+    "exclude": ["dist", "node_modules"]
 }
