--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
 	"scripts": {
 		"coverage": "hardhat coverage",
 		"build": "hardhat compile",
-		"test": "hardhat test",
+		"test": "hardhat test --typecheck",
 		"clean": "hardhat clean"
 	},
 	"dependencies": {
@@ -36,7 +36,7 @@
 		"@typechain/hardhat": "^9.1.0",
 		"@types/chai": "^4.3.11",
 		"@types/mocha": "^10.0.6",
-		"@types/node": "^20.9.5",
+		"@types/node": "^20.10.0",
 		"@typescript-eslint/eslint-plugin": "^6.12.0",
 		"@typescript-eslint/parser": "^6.12.0",
 		"chai": "^4.3.10",
